# riptide_setup

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  RunUWRTDocker  SUMMARY.md  SetupUWRTDocker  example-package.md  install-ceres  install-max-ros  markdown-cheatsheet.md  maximal  minimal  mv-repo-to-ws  riptide-ros-topics.md  riptide_base.repos  riptide_base_noetic.repos  riptide_behaviors.md  riptide_bringup.md  riptide_controllers.md  riptide_hardware.md  riptide_msgs.md  riptide_ros2.repos  riptide_ros2.repos.backup  riptide_teleop.md  riptide_utilities.md  ros-install-max  ros-install-min  setup.bash  setup.sh  software_diagram.xml  uninstall
colcon_riptide/: README.md  setup.cfg
colcon_riptide/colcon_riptide/: __init__.py
imu_3dm_gx4/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  package.xml
imu_3dm_gx4/calib/: imu_3dm_gx4_25.yaml
imu_3dm_gx4/launch/: imu.launch
imu_3dm_gx4/msg/: FilterOutput.msg  MagFieldCF.msg  MagFieldKF.msg
imu_3dm_gx4/script/: README.md  imu.rules  imu_3dm_gx4.rules  install_imu_driver.sh  install_imu_driver_root.sh
imu_3dm_gx4/src/: imu.cpp  imu.hpp  imu_3dm_gx4.cpp
jaws2_solver/: CMakeLists.txt  README.md  package.xml
jaws2_solver/src/: thrust_mapper.cpp
riptide_autonomy/: CMakeLists.txt  package.xml  setup.py
riptide_autonomy/action/: Align.action  Alignment.action  BuoyTask.action  DecapTask.action  ExposeTask.action  Find.action  FindGate.action  FindMarker.action  GarlicTask.action  GateAlignment.action  GateTask.action  GoToFinals.action  LinearAlign.action  MarkerAlignment.action  PassThruGate.action  Search.action  actionTools.py  actionWrapper.py  beAutonomous.py  buoyTask.py  decapTask.py  exposeTask.py  garlicTask.py  gateTask.py  goToFinals.py  navigate.py  prequalify.py  search.py  task.py
riptide_autonomy/cfg/: task_execution.yaml  task_map_semis.yaml  task_order.yaml  tasks.json  tasks.yaml
riptide_autonomy/launch/: actions.launch  be_autonomous.launch  prequalify.launch
riptide_autonomy/scripts/: QualifyingRunSMACH.py  calibrate_alignment.py  gate_sm.py  gate_task.py  main_container.py  marker_sm.py  qualify_sm.py
riptide_autonomy/servers/: align_server.cpp  find_server.cpp  linear_align_server.cpp
riptide_autonomy/src/: action_server_template.cpp  action_server_template.py  be_autonomous.cpp  casino_gate.cpp  dice.cpp  navigate_action_server.cpp  object_describer.cpp  path_marker.cpp  roulette.cpp  runAutonomous.py  task.gate.cpp  task_cash_in.cpp  task_casino_gate.cpp  task_dice.cpp  task_dice_hop.cpp  task_gold_chip.cpp  task_path_marker.cpp  task_roulette.cpp  task_slots.cpp  tslam.cpp  validators.cpp
riptide_autonomy/srv/: ResetControllers.srv
riptide_autonomy/state_machine/: Main.py  state_machine_template.py
riptide_behaviors/: .gitignore  CMakeLists.txt  README.md  package.xml
riptide_behaviors/launch/: go_straight.launch
riptide_behaviors/riptide_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
riptide_behaviors/riptide_flexbe_states/: CMakeLists.txt  package.xml  setup.py
riptide_behaviors/src/: go_straight.cpp
riptide_bringup/: CMakeLists.txt  Readme.md  package.xml
riptide_bringup/config/: PoolTest.perspective
riptide_bringup/launch/: MonoOdometry.launch  acceleration.launch  acoustics_test.launch  alignment_test.launch  arm_thrusters.launch  autonomy.launch  battelle.launch  bringup.launch  calibration.launch  control_stack.launch  controls.launch  controls2.launch  go.launch  local_autonomy.launch  local_bringup.launch  local_simulation.launch  logging.launch  pole_aligner.launch  prequalify.launch  ps3-jetson.launch  ps3-riptide.launch  ps3.launch  ps3_basic.launch  ps3_control.launch  ps3_vision.launch  ps3_yolo.launch  pwm.launch  qualify.launch  rpac.launch  simulator.launch  teleop.launch  test_thrusters.launch  thrust_test.launch  tune_pid.launch  validation.launch  vision.launch  vision_control.launch
riptide_bringup/scripts/: gui.sh
riptide_bringup/src/: .thruster_validation.cpp.swp  thruster_validation.cpp
riptide_controllers/: CMakeLists.txt  Readme.md  package.xml  riptide_controllers.md
riptide_controllers/action/: Align.action  Arc.action  GateManeuver.action  GetDistance.action  GoToDepth.action  GoToPitch.action  GoToPosition.action  GoToRoll.action  GoToYaw.action  MoveDistance.action  Navigate.action  Wait.action  align.py  arc.py  calibrate.py  depth_command.action  gateManeuver.py  getDistance.py  goToDepth.py  goToPitch.py  goToPosition.py  goToRoll.py  goToTask.py  goToYaw.py  moveDistance.py  navigate.py  sickTricks.py  wait.py
riptide_controllers/cfg/: AlignmentController.cfg  AttitudeController.cfg  DepthController.cfg  LinearController.cfg  VehicleParams.cfg  VehicleProperties.cfg  alignment_controller_properties.yaml  attitude_controller_properties.yaml  controller_properties_alignment.yaml  controller_properties_attitude.yaml  controller_properties_depth.yaml  controller_properties_thruster.yaml  depth_config.yaml  max_accel.yaml  max_load.yaml  pid_config_depth.yaml  pid_config_heave.yaml  pid_config_pitch.yaml  pid_config_roll.yaml  pid_config_surge.yaml  pid_config_sway.yaml  pid_config_yaw.yaml  pitch_config.yaml  task_info.yaml  thruster2com.yaml  thruster2com_OLD.yaml  thruster_config.yaml  thruster_config_copro.yaml  thruster_force_vs_pwm.yaml  vehicle_properties.yaml  vehicle_properties2.yaml  vehicle_properties_OLD.yaml  yaw_config.yaml
riptide_controls/: CMakeLists.txt  package.xml
riptide_description/: CMakeLists.txt  package.xml
riptide_estimation/: CMakeLists.txt  package.xml
riptide_gazebo/: CMakeLists.txt  package.xml
riptide_gnc/: CMakeLists.txt  package.xml
riptide_hardware/: CMakeLists.txt  CMakeLists.txt~  README.md  Readme.md  package.xml  package.xml~
riptide_msgs/: CMakeLists.txt  CMakeLists.txt~  README.md  Readme.md  package.xml  package.xml~
riptide_navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml
riptide_pid/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
riptide_robot/: CMakeLists.txt  package.xml  user_guide.md
(+941 files in other folders)
