<?xml version="1.0"?>
<package>
  <name>riptide_controls</name>
  <version>0.0.15</version>
  <description>Control systems for OSU's Riptide AUV.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/riptide</url>

  <author email="cary.42@osu.edu">Conor Cary</author>
  <author email="mahaffey.60@osu.edu">Sara Mahaffey</author>
  <author email="justice.251@osu.edu">Benji Justice</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>riptide_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>control_toolbox</run_depend>
  <run_depend>riptide_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>

</package>
