<?xml version="1.0"?>
<package>
  <name>riptide_gazebo</name>
  <version>0.0.17</version>
  <description>Gazebo simulation package for OSU's Riptide AUV.</description>

  <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/riptide</url>

  <author email="justice.251@osu.edu">Benji Justice</author>
  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>riptide_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>sim_common</run_depend>

  <export>
  </export>
</package>
