<?xml version="1.0"?>
<package format="2">
  <name>riptide_gnc</name>
  <version>0.0.0</version>
  <description>The riptide_gnc package</description>

  <maintainer email="tsender@todo.todo">tsender</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>auv_gnc</build_depend>
  <depend>roscpp</depend>
  <depend>riptide_msgs</depend>
  <depend>auv_msgs</depend>

  <export>
  </export>
</package>
