<?xml version="1.0"?>
<package>
  <name>riptide_hardware</name>
  <version>0.0.10</version>
  <description>Hardware abstraction layer for OSU's Riptide AUV.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/riptide</url>

  <author email="cary.42@osu.edu">Conor Cary</author>
  <author email="fletcher.236@osu.edu">Charles Fletcher</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosserial_python</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>riptide_msgs</build_depend>

  <run_depend>rosserial_python</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>riptide_msgs</run_depend>

  <export>
  </export>
</package>
